--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-boilerplate-react",
-  "version": "5.0.4",
-  "description": "A chrome extension boilerplate built with React 18, Webpack 5, and Webpack Dev Server 4",
+  "name": "Hans Highlight",
+  "version": "0.0.1",
+  "description": "Hans Highlight: A Dynamic Text Highlighting Chrome Extension",
   "license": "MIT",
   "repository": {
     "type": "git",
